2011-07-03 belangeo <belangeo@gmail.com>

    * Added new objects: OscDataSend and OscDataReceive.
    - rev 668

2011-06-15 belangeo <belangeo@gmail.com>

    * Added 'feedback' attribute to NewTable object.
    - rev 659

2011-06-14 belangeo <belangeo@gmail.com>

    * New object : TrigTableRec.
    - rev 658

2011-06-02 belangeo <belangeo@gmail.com>

    * Added cartesian to polar and polar to cartesian conversions.
    - rev 655

2011-06-01 belangeo <belangeo@gmail.com>

    * Protected (self->steps == 0) in line generation to avoid division by zero.
    - rev 654

2011-05-31 belangeo <belangeo@gmail.com>

    * Added Fast Fourier Transform (FFT, IFFT).
    - rev 652

2011-05-18 belangeo <belangeo@gmail.com>

    * Added getVersion() function and upgrade version number to '0.4.1'.
    - rev 645

2011-05-18 belangeo <belangeo@gmail.com>

    * Improved soundfile player family (SfPlayer, SfMarkerShuffler and SfMarkerLooper).
    - rev 644

2011-05-13 belangeo <belangeo@gmail.com>

    * New object : FourBand (linear phase spectrum splitter).
    - rev 640

2011-05-11 belangeo <belangeo@gmail.com>

    * New object : ParaTable (parabola window function).
    - rev 637

2011-05-11 belangeo <belangeo@gmail.com>

    * Added 'outputAmp' argument to Compress and Gate. Useful to link several channels.
    - rev 636

2011-05-10 belangeo <belangeo@gmail.com>

    * New object: Gate (noise gate).
    - rev 635

2011-05-10 belangeo <belangeo@gmail.com>

    * New object: Follower2 (different attack and release times).
    - rev 634

2011-05-10 belangeo <belangeo@gmail.com>

    * Completely redesigned Follower.
    - rev 633

2011-05-10 belangeo <belangeo@gmail.com>

    * Completely redesigned Compress.
    - rev 632

2011-05-05 belangeo <belangeo@gmail.com>

    * SigTo can be used with PyoObject as input value.
    - rev 631

2011-05-03 belangeo <belangeo@gmail.com>

    * Port filter optimization.
    - rev 630


2011-05-03 belangeo <belangeo@gmail.com>
